--- a/app/src/main/res/layout/fragment_registro_clientes.xml
+++ b/app/src/main/res/layout/fragment_registro_clientes.xml
@@ -4,54 +4,68 @@
     android:layout_height="match_parent"
     tools:context="com.example.fabi.atc.Fragmentos.RegistroClientes">
 
-    <EditText
-        android:id="@+id/edtR"
-        android:hint="R-001"
-        android:enabled="false"
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/Clave"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Clave del Cliente: "
+        android:textSize="20dp"
+        />
+
+ <EditText
+     android:enabled="false"
+     android:id="@+id/edtClave"
+     android:textAlignment="center"
+     android:hint="R1-001"
+     android:layout_toEndOf="@id/Clave"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content" />
+
     <EditText
         android:id="@+id/edtNombre"
         android:textAlignment="center"
+        android:layout_below="@id/edtClave"
         android:hint="Nombre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
-    <Spinner
-        android:id="@+id/spCiudades"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/edtNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:id="@+id/edtDireccion"
-        android:textAlignment="center"
-        android:hint="Dirección"
-        android:layout_below="@id/edtR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/edtDireccion"
+        android:textAlignment="center"
+        android:layout_below="@id/edtNombre"
+        android:hint="Dirección"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/Ciudades"
+        android:layout_below="@id/edtDireccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <Button
         android:text="Aceptar"
-        android:id="@+id/btnAgregar"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/edtDireccion"
+        android:layout_below="@id/Ciudades"
+        android:id="@+id/btnAceptar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
     <EditText
+
+        android:layout_toStartOf="@id/btnAceptar"
         android:id="@+id/edtTelefono"
         android:textAlignment="center"
-        android:layout_below="@id/edtDireccion"
-        android:hint="Teléfono"
+        android:layout_below="@id/Ciudades"
+        android:hint="Telefono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <ListView
-        android:id="@+id/listaClientes"
-        android:layout_below="@id/edtTelefono"
+        android:id="@+id/RegistroClientes"
+        android:layout_below="@id/btnAceptar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"/>
 
 
 </RelativeLayout>
