--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -14,15 +14,21 @@
         android:background="@color/colorGris"
         android:paddingBottom="4dp">
 
-
+     <ImageView
+         android:id="@+id/img"
+         android:src="@drawable/ic_productos"
+         android:layout_width="100dp"
+         android:layout_height="100dp" />
 
         <TextView
+            android:layout_toEndOf="@id/img"
             android:id="@+id/titulocard"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:text="Titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:layout_toEndOf="@id/img"
             android:id="@+id/subtitulocard"
             android:textSize="15dp"
             android:layout_marginTop="10dp"
@@ -32,6 +38,7 @@
             android:text="Subtitulo"
             />
         <TextView
+            android:layout_toEndOf="@id/img"
             android:id="@+id/precio"
             android:textSize="15dp"
             android:layout_marginTop="10dp"
@@ -40,6 +47,13 @@
             android:layout_height="wrap_content"
             android:text="Subtitulo"
             />
+      <ImageButton
+          android:background="@android:color/transparent"
+          android:layout_centerInParent="true"
+          android:layout_alignParentRight="true"
+          android:layout_width="60dp"
+          android:layout_height="60dp"
+          android:src="@drawable/ic_carrito_mas"/>
 
 
 
