--- a/app/src/main/res/layout/modelo_spinner.xml
+++ b/app/src/main/res/layout/modelo_spinner.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:text="Ciudad"
         android:id="@+id/spinnerCiudad"
