--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,10 @@
             android:id="@+id/Creditos"
             android:icon="@drawable/insertar"
             android:title="Creditos" />
+        <item
+            android:id="@+id/InventarioG"
+            android:icon="@drawable/insertar"
+            android:title="Inventario General" />
     </group>
 
     <item android:title="Communicate">
