--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -16,7 +16,6 @@
 
      <ImageView
          android:id="@+id/img"
-         android:src="@drawable/ic_productos"
          android:layout_width="100dp"
          android:layout_height="100dp" />
 
@@ -47,13 +46,13 @@
             android:layout_height="wrap_content"
             android:text="Subtitulo"
             />
-      <ImageButton
+     <!-- <ImageButton
           android:background="@android:color/transparent"
           android:layout_centerInParent="true"
           android:layout_alignParentRight="true"
           android:layout_width="60dp"
           android:layout_height="60dp"
-          android:src="@drawable/ic_carrito_mas"/>
+          android:src="@drawable/ic_carrito_mas"/> -->
 
 
 
