--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -7,7 +7,8 @@
     <ListView
         android:id="@+id/lvInicio"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:clickable="true"/>
 
 
 </RelativeLayout>
