--- a/app/src/main/res/layout/fragment_telefonos_general.xml
+++ b/app/src/main/res/layout/fragment_telefonos_general.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.fabi.atc.Fragmentos.TelefonosGeneral">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<ListView
+    android:id="@+id/telefonosGeneral"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
 </FrameLayout>
