--- a/app/src/main/res/layout/fragment_registro_clientes.xml
+++ b/app/src/main/res/layout/fragment_registro_clientes.xml
@@ -18,12 +18,12 @@
      android:enabled="false"
      android:id="@+id/edtClave"
      android:textAlignment="center"
-     android:hint="R1-001"
      android:layout_toEndOf="@id/Clave"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
 
     <EditText
+        android:inputType=""
         android:id="@+id/edtNombre"
         android:textAlignment="center"
         android:layout_below="@id/edtClave"
@@ -39,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Spinner
+        android:textAlignment="center"
         android:id="@+id/Ciudades"
         android:layout_below="@id/edtDireccion"
         android:layout_width="match_parent"
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content" />
 
     <EditText
-
+        android:inputType="phone"
         android:layout_toStartOf="@id/btnAceptar"
         android:id="@+id/edtTelefono"
         android:textAlignment="center"
