--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,11 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.fabi.atc.MainActivity"
+    android:background="@drawable/fondo_app_02"
     tools:showIn="@layout/app_bar_main">
+
+
+
     <!--<TextView
         android:layout_marginTop="17dp"
         android:id="@+id/txtBienvenido"
