--- a/app/src/main/res/layout/fragment_reportes.xml
+++ b/app/src/main/res/layout/fragment_reportes.xml
@@ -53,6 +53,7 @@
 
 
     <ListView
+        android:id="@+id/listReportes"
         android:layout_below="@id/btnFechaFinal"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
