--- a/app/src/main/res/layout/modelo_clientes.xml
+++ b/app/src/main/res/layout/modelo_clientes.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="cursive"
         android:layout_alignParentRight="true"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:text="R1-001"
@@ -11,14 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:fontFamily="serif"
+        android:textSize="18dp"
         android:id="@+id/nombreCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"/>
 
     <TextView
-        android:textSize="18dp"
+        android:textSize="14dp"
         android:id="@+id/ciudadCliente"
         android:text="Ciudad"
         android:layout_below="@+id/nombreCliente"
@@ -26,6 +29,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textSize="14dp"
         android:id="@+id/telefonoCliente"
         android:layout_below="@id/ciudadCliente"
         android:text="Teléfono"
