--- a/app/src/main/res/layout/fragment_registro_clientes.xml
+++ b/app/src/main/res/layout/fragment_registro_clientes.xml
@@ -4,22 +4,30 @@
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.RegistroClientes">
+    <ImageView
+        android:id="@+id/imgUsuario"
+        android:src="@drawable/usuario"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp" />
 
 
     <TextView
+      android:textAlignment="center"
+        android:layout_toEndOf="@id/imgUsuario"
         android:layout_marginTop="10dp"
         android:id="@+id/Clave"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Clave del Cliente: "
         android:textSize="20dp"
         />
 
  <EditText
+     android:layout_toEndOf="@id/imgUsuario"
+     android:layout_below="@id/Clave"
      android:enabled="false"
      android:id="@+id/edtClave"
      android:textAlignment="center"
-     android:layout_toEndOf="@id/Clave"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
 
@@ -27,35 +35,39 @@
         android:inputType=""
         android:id="@+id/edtNombre"
         android:textAlignment="center"
-        android:layout_below="@id/edtClave"
+        android:layout_below="@id/imgUsuario"
         android:hint="Nombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
+        android:layout_marginTop="20dp"
         android:id="@+id/edtDireccion"
         android:textAlignment="center"
         android:layout_below="@id/edtNombre"
         android:hint="Dirección"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:layout_marginTop="20dp"
+        android:id="@+id/txtCiudad"
+        android:textSize="20dp"
+        android:text="Ciudad"
+        android:layout_below="@id/edtDireccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <Spinner
+        android:paddingLeft="50dp"
+        android:layout_toRightOf="@id/txtCiudad"
+        android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:id="@+id/Ciudades"
         android:layout_below="@id/edtDireccion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <Button
-        android:text="Aceptar"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/Ciudades"
-        android:id="@+id/btnAceptar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <EditText
+        android:layout_marginTop="20dp"
         android:inputType="phone"
-        android:layout_toStartOf="@id/btnAceptar"
         android:id="@+id/edtTelefono"
         android:textAlignment="center"
         android:layout_below="@id/Ciudades"
@@ -63,11 +75,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/RegistroClientes"
-        android:layout_below="@id/btnAceptar"
+    <EditText
+        android:id="@+id/edtCorreo"
+        android:textAlignment="center"
+        android:hint="Correo Electronico"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/edtTelefono"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content" />
+    <Button
+        android:drawableTop="@drawable/ic_aceptar_negro"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="Agregar"
+        android:layout_alignParentRight="true"
+        android:id="@+id/btnAgregarUsuario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+
+
+        />
 
 
 </RelativeLayout>
