--- a/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
+++ b/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.fabi.atc.Fragmentos.CreditosContenedor">
+    android:background="@color/colorBlanco"
+    tools:context="com.example.fabi.atc.Fragmentos.detallesCreditosPendientes">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/ViewPagerCreditos"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
