--- a/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
+++ b/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
@@ -5,10 +5,9 @@
     android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.detallesCreditosPendientes">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/detallesCreditos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
