--- a/app/src/main/res/layout/modelocreditosgeneral.xml
+++ b/app/src/main/res/layout/modelocreditosgeneral.xml
@@ -50,15 +50,17 @@
             android:fontFamily="serif"
             android:text="Fecha"
             android:id="@+id/fechaCredito"
-            android:layout_alignParentRight="true"
+            android:layout_below="@id/ClaveCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
-
-
-
-
-
+        <Button
+            android:id="@+id/registrarAbono"
+            android:focusableInTouchMode="false"
+            android:focusable="false"
+            android:background="@drawable/sumar"
+            android:layout_alignParentRight="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
