--- a/app/src/main/res/layout/fragment_registrar_abono.xml
+++ b/app/src/main/res/layout/fragment_registrar_abono.xml
@@ -35,10 +35,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/btnAgregarAbono"
         android:drawableTop="@drawable/ic_aceptar_negro"
         android:text="Agregar"
         android:layout_below="@id/edtABono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/Abonos"
+        android:layout_below="@id/btnAgregarAbono"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </RelativeLayout>
