Se muestran los abonos realizados y el total actual que le queda

--- a/app/src/main/res/layout/fragment_registrar_abono.xml
+++ b/app/src/main/res/layout/fragment_registrar_abono.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textAlignment="center"
         android:id="@+id/edtmontoTotal"
         android:enabled="false"
         android:layout_below="@id/montoTotal"
