--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -46,6 +46,14 @@
             android:layout_height="wrap_content"
             android:text="Subtitulo"
             />
+        <TextView
+            android:id="@+id/cantidadproductos"
+            android:layout_marginTop="10dp"
+            android:text="Cantidad"
+            android:layout_toRightOf="@id/img"
+            android:layout_below="@id/precio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <Button
             android:focusableInTouchMode="false"
             android:focusable="false"
@@ -56,15 +64,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp" />
 
-  <!--   <ImageButton
-         android:clickable="true"
-         android:id="@+id/btnCarrito"
-          android:background="@android:color/transparent"
-          android:layout_centerInParent="true"
-          android:layout_alignParentRight="true"
-          android:layout_width="60dp"
-          android:layout_height="60dp"
-          android:src="@drawable/ic_carrito_mas"/>-->
+
 
 
 
