Se agregaron los refresh

--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -1,3 +1,11 @@
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/contenedorCatalogoAccesorios"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBlanco"
+    tools:context="com.example.fabi.atc.Fragmentos.ClientesActivos">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,3 +19,4 @@
      android:layout_height="match_parent"></ListView>
 
 </FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
