--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -1,3 +1,11 @@
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/contenedorCatalogoChips"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBlanco"
+    tools:context="com.example.fabi.atc.Fragmentos.ClientesActivos">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,5 +17,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-
 </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
