--- a/app/src/main/res/layout/fragment_reportes.xml
+++ b/app/src/main/res/layout/fragment_reportes.xml
@@ -56,6 +56,14 @@
         android:id="@+id/listReportes"
         android:layout_below="@id/btnFechaFinal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="350dp" />
+    <TextView
+        android:id="@+id/edttotalcomisiones"
+        android:fontFamily="monospace"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
