Se agrego el refresh en el fragmento de creditos pendientes

--- a/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
+++ b/app/src/main/res/layout/fragment_detalles_creditos_pendientes.xml
@@ -1,13 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlanco"
     tools:context="com.example.fabi.atc.Fragmentos.detallesCreditosPendientes">
-
     <ListView
         android:id="@+id/detallesCreditos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</FrameLayout>
+        android:layout_height="470dp"/>
+    <TextView
+        android:id="@+id/txtTotalCreditos"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
