--- a/app/src/main/res/layout/modelodetallescreditos.xml
+++ b/app/src/main/res/layout/modelodetallescreditos.xml
@@ -25,14 +25,12 @@
         <TextView
             android:fontFamily="serif-monospace"
             android:id="@+id/marca"
-            android:layout_toEndOf="@id/img"
             android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/tipoArticulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Marca"
-            />
+            android:layout_alignTop="@+id/monto"
+            android:layout_alignParentStart="true" />
         <TextView
             android:fontFamily="serif-monospace"
             android:id="@+id/modelo"
